--- a/CompanyManagement/CompanyManagement.Repository/CompanyManagement.Repository.csproj
+++ b/CompanyManagement/CompanyManagement.Repository/CompanyManagement.Repository.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.1" />
+    <PackageReference Include="Serilog" Version="3.1.1" />
   </ItemGroup>
 
 
