chore: Finished the company API updates, along with the UI.

--- a/company-management-backend/CompanyManagement.Repository/CompanyManagement.Repository.csproj
+++ b/company-management-backend/CompanyManagement.Repository/CompanyManagement.Repository.csproj
@@ -12,5 +12,9 @@
     <PackageReference Include="Serilog" Version="3.1.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CompanyManagement.Criteria\CompanyManagement.Criteria.csproj" />
+  </ItemGroup>
+
 
 </Project>
