--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,18 @@ services:
       POSTGRES_HOST_AUTH_METHOD: md5
       POSTGRES_DB: company-management
       PGPORT: 5432
+    volumes:
+      -  /c/codes/arvato/db:/var/lib/postgresql/data:rw
+  web-app:
+    build:
+      context: .
+      dockerfile: Dockerfile_WebApp
+    container_name: comp_management_web_app
+    restart: always
+    ports:
+      - "8081:8081"
+    networks:
+      - dev_network
 networks:
   dev_network:
     name: dev_network
