chore: Add the grpc service for testing the industry list.

--- a/CompanyManagement.Grpc/CompanyManagement.Grpc.csproj
+++ b/CompanyManagement.Grpc/CompanyManagement.Grpc.csproj
@@ -6,4 +6,20 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Protos\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Protobuf Include="Protos\industry.proto" GrpcServices="Server" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Grpc.AspNetCore" Version="2.61.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\company-management-backend\CompanyManagement.Service\CompanyManagement.Service.csproj" />
+  </ItemGroup>
+
 </Project>
