--- a/company-management-backend/CompanyManagement.WebApi/CompanyManagement.WebApi.csproj
+++ b/company-management-backend/CompanyManagement.WebApi/CompanyManagement.WebApi.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Grpc.AspNetCore" Version="2.61.0" />
     <PackageReference Include="MediatR" Version="12.2.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
@@ -18,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\CompanyManagement.Grpc\CompanyManagement.Grpc.csproj" />
     <ProjectReference Include="..\CompanyManagement.BL\CompanyManagement.BL.csproj" />
     <ProjectReference Include="..\CompanyManagement.Repository\CompanyManagement.Repository.csproj" />
     <ProjectReference Include="..\CompanyManagement.Service\CompanyManagement.Service.csproj" />
